--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "dev": "next dev --webpack",
     "build": "prisma generate && prisma migrate deploy && next build --webpack",
+    "build:local": "prisma generate && next build --webpack",
+    "migrate:deploy": "prisma migrate deploy",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "prisma": "^7.2.0",
     "jose": "^6.1.3",
     "next": "16.1.1",
     "pg": "^8.16.3",
@@ -26,7 +30,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
-    "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vercel": "^50.1.6"
