--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "prisma generate && prisma migrate deploy && next build --webpack",
+    "build": "prisma generate && next build --webpack",
     "build:local": "prisma generate && next build --webpack",
     "migrate:deploy": "prisma migrate deploy",
     "start": "next start",
