--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "framer-motion": "^12.26.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
